Fix Host stuck at the right side
Cause:
This bug only repro on chrome v33 and v34

<div class="vertically-centered">
  <div class="horizontally-centered">
    <div id="video-container">
      <video id="mediasource-video-output"></video>
      <div id="client-plugin-container"></div>
    </div>
  </div>
</div>

Due to a chrome layout bug, the width of video-container collapses to 0 when the zoom level is greater than 100%. As a result, the flexbox defined in horizonally-centered fails to center the element.

Fix:
Set width=100% on video-container so that its width remains valid.  Since video-container now sizes to the parent, we need to move the horizontal-centered flexbox to the children of video-container.

BUG=357114

Review URL: https://codereview.chromium.org/217363002

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@260386 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: dc87ae4463aa9cf5a167f0f999d04981f1e041b9

--- a/remoting/webapp/main.css
+++ b/remoting/webapp/main.css
@@ -743,6 +743,7 @@ html.apps-v2.scrollable {
 /* video-container needs relative position so that mediasource-video-output can
  * be positioned relative to the parent with position:absolute. */
 #video-container {
+  width: 100%;
   position: relative;
 }
 
